0023853: BOP regression (2) - BRepAlgoAPI_Cut. Modifications: Changed the way of finding the angle between the faces. New static functions: GetFaceDir - builds direction for the face; FindPointInFace - finds the point in the face in bi normal direction.

New square values have been set in the following test cases:
boolean bopcommon_complex J1
bugs modalg_2 bug202085_6
              bug202085_7
              bug202085_8
              bug202085_9
              bug202085_10.
"TODO" marks have been removed from these cases.
Added test cases bugs modalg_5 bug23853